# KraBot

./: .env.example  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.gitlab  Jenkinsfile  LICENSE  README.md  appveyor.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: docker-image.yml
.teamcity/Rsbot/: project-config.xml
.teamcity/_Root/: project-config.xml
.teamcity/_Root/vcsRoots/: Rsbot.xml
benches/: my_benchmark.rs
config/: config.toml  config_example.toml  log4rs.toml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/discord/: events.rs  global_data.rs  hooks.rs  mod.rs
lib/src/discord/commands/: mod.rs
lib/src/discord/commands/audio/: join.rs  leave.rs  mod.rs  now_playing.rs  pause.rs  play.rs  play_playlist.rs  queue.rs  resume.rs  seek.rs  skip.rs  stop.rs
lib/src/discord/commands/fun/: roll.rs
lib/src/discord/commands/general/: metadata.rs  mod.rs  password.rs  ping.rs  score_password.rs  uptime.rs
lib/src/env/: mod.rs
lib/src/misc/: mod.rs
rsbot/: Cargo.toml
rsbot/benches/: my_benchmark.rs
rsbot/src/: config.rs  framework.rs  handler.rs  main.rs
rsbot/src/audio/: mod.rs  track_manager.rs
rsbot/src/commands/: fun.rs  math.rs  meta.rs  mod.rs  owner.rs  voice.rs
rsbot/src/database/: data.rs  mod.rs
rsbot/src/database/postgres/: mod.rs  tables.rs
rsbot/src/util/api/imgur/: imgur.rs  mod.rs  models.rs
rsbot/src/util/api/twitch/: twitch.rs
rsbot/src/util/api/youtube/: models.rs  youtube.rs
rsbot/src/util/network/request/: request.rs
rsbot/src/util/threads/: uptime.rs
rsbot_lib/: Cargo.toml
rsbot_lib/migrations/2019-01-21-133618_create_guilds_table/: up.sql
rsbot_lib/migrations/2019-01-21-135848_create_shards_table/: down.sql  up.sql
rsbot_lib/migrations/2019-01-22-134443_create_guilds_table/: up.sql
rsbot_lib/src/: database.rs  lib.rs  models.rs  schema.rs
src/: config.rs  main.rs
src/audio/: mod.rs  track_manager.rs
src/cli/: mod.rs
src/commands/: fun.rs  imgur.rs  math.rs  meta.rs  mod.rs  owner.rs  voice.rs
src/commands/fun/: mod.rs
src/commands/general/: mod.rs
src/database/: database.rs  redis.rs
src/database/postgres/: postgres.rs
src/database/redis/: mod.rs  startuptime.rs
src/database/sqlite/: sqlite.rs
src/util/: mod.rs  network.rs
src/util/api/: mod.rs
src/util/api/imgur/: imgur.rs  mod.rs
src/util/api/twitch/: twitch.rs
src/util/api/youtube/: youtube.rs
src/util/network/request/: request.rs
src/util/threads/: uptime.rs
src/voice/: mod.rs  music_advanced.rs  music_basic.rs
