[package]
name = "rsbot"
version = "0.3.0"
authors = ["raymond.mao","daniel.holzner"]
publish = false

[profile.release]
lto = true

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
typemap = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = "0.11"
fern = "0.5"
tokio-core = "0.1"
transient-hashmap = "0.4.0"

[dependencies.lazy_static]
version = "1.0"
features = ["nightly"]

[dependencies.serenity]
git = "https://github.com/zeyla/serenity.git"
features = ["builder", "cache", "client" ,"framework", "gateway", "http", "model", "standard_framework", "utils", "voice"]

[dependencies.rusqlite]
version = "0.13"
features = ["chrono"]