[package]
name = "rsbot"
version = "0.4.0"
authors = ["raymond.mao","daniel.holzner"]
publish = false

[profile.release]
lto = true

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
typemap = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.2"
fern = "0.5"
tokio-core = "0.1"
transient-hashmap = "0.4.0"
serde_json = "1.0.10"
regex = "0.2"
uuid = { version = "0.5", features = ["serde", "v4"] }
postgres = { version = "0.15", features = ["with-uuid", "with-time"] }
r2d2 = "0.8"
r2d2_postgres = "0.14"
eval = "0.4.2"
rand = "0.4.2"



[dependencies.lazy_static]
version = "1.0"

[dependencies.serenity]
# git = "https://github.com/zeyla/serenity.git"
# branch = "v0.6.x"
version = "0.5.3"
features = ["builder", "cache", "client" ,"framework", "gateway", "http", "model", "standard_framework", "utils", "voice"]

[dependencies.rusqlite]
version = "0.13"
features = ["chrono"]

[build-dependencies]
cc = "1.0.4"