[package]
name = "lib"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
log = "0.4"
serenity = { version = "0.10", default-features = false, features = [
    "client",
    "cache",
    "voice",
    "gateway",
    "rustls_backend",
    "model",
    "standard_framework",
] }
tokio = { version = "1.0", features = ["full"] }
lavalink-rs = { version = "*", features = ["rustls", "serenity"] }
songbird = { version = "*", default-features = false, features = [
    "serenity-rustls",
    "gateway",
] }
