[package]
name = "lib"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
log = "0.4"
lazy_static = "1.4"
serenity = { version = "0.10", default-features = false, features = [
    "client",
    "cache",
    "voice",
    "gateway",
    "rustls_backend",
    "model",
    "standard_framework",
    "collector",
] }
tokio = { version = "1.0", features = ["full"] }
lavalink-rs = { version = "0.8.0", features = ["rustls", "serenity"] }
songbird = { version = "0.1.8", default-features = false, features = [
    "serenity-rustls",
    "gateway",
] }
