[package]
name = "rsbot"
version = "0.4.0"
authors = ["raymond.mao","daniel.holzner"]
publish = false

[dependencies]
rsbot_lib = { path = "../rsbot_lib" }
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
typemap = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
reqwest = "0.9"
# hyper = "0.11"
# hyper-tls = "0.1"
fern = "0.5"
tokio = "0.1"
tokio-core = "0.1"
transient-hashmap = "0.4.0"
serde_json = "1.0"
regex = "1.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
eval = "0.4"
rand = "0.6"
lazy_static = "1"

[dependencies.serenity]
#git = "https://github.com/serenity-rs/serenity"
#branch = "master"
version = "0.5"
features = ["builder", "cache", "client" ,"framework", "gateway", "http", "model", "standard_framework", "utils", "voice"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false